--- a/custom_theme/base.html
+++ b/custom_theme/base.html
@@ -20,6 +20,7 @@
         <link href="{{ 'css/bootstrap.min.css'|url }}" rel="stylesheet">
         <link href="{{ 'css/font-awesome.min.css'|url }}" rel="stylesheet">
         <link href="{{ 'css/base.css'|url }}" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
         {%- if config.theme.highlightjs %}
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/{{ config.theme.hljs_style }}.min.css">
         {%- endif %}
@@ -113,7 +114,31 @@
                 </div>
             </div>
         </div>
-
+         <div class="container-fluid">
+            <div class="row">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="slide-image" src="../img/img1.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="slide-image" src="../img/img2.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="slide-image" src="../img/img3.jpg" alt="Third slide">
+                    </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+            </div>
+        </div>
         <div class="container">
             <div class="row">
                 {%- block content %}
@@ -122,15 +147,43 @@
                 {%- endblock %}
             </div>
         </div>
+        <footer class="container-fluid">
+              <hr>
+              <div class="row">
+                <div class="col-md-4">
+                    <span>Important links</span>
+                    <ul class="important-links">
+                        <li><a href="">link1</a></li>
+                        <li> <a href="">link2</a></li>
+                        <li><a href="">link3</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    {%- block footer %}
+                  
+                    {%- if config.copyright %}
+                        <p>{{ config.copyright }}</p>
+                    {%- endif %}
+                        <p>Copyright&copy;2019</p>
+                    {%- endblock %}
+                </div>
+                <div class="col-md-4 inline">
+                    <div class="col-md-1">
+                        <a href="" target="_blank" title="youtube"><i class="fab fa-youtube-square icon-youtube"></i></a> 
+                    </div>
+                     <div class="col-md-1">
+                        <a href="" target="_blank" title="twitter"><i class="fab fa-twitter-square icon-twitter"></i></a>
+                    </div>
+                     <div class="col-md-1">
+                        <a href="" target="_blank" title="instagram"><i class="fab fa-instagram icon-instagram"></i></a>
+                    </div>
+                     <div class="col-md-1">
+                         <a href="" target="_blank" title="facebook"><i class="fab fa-facebook-square icon-facebook"></i></a>
+                    </div>
+                   
+                </div>
 
-        <footer class="col-md-12">
-          {%- block footer %}
-            <hr>
-            {%- if config.copyright %}
-                <p>{{ config.copyright }}</p>
-            {%- endif %}
-            <p>Copyright&copy;2019</p>
-          {%- endblock %}
+             </div>
         </footer>
 
       {%- block scripts %}
@@ -146,6 +199,5 @@
 
         {% if 'search' in config['plugins'] %}{%- include "search-modal.html" %}{% endif %}
         {%- include "keyboard-modal.html" %}
-
     </body>
 </html>
